--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.1",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/support": "5.8.*|6.*|7.*|8.*"
